--- a/products/products.html
+++ b/products/products.html
@@ -32,7 +32,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../index.html">About</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a href="#">Shopping Cart</a></li>
+        <li><a href="../cart/cart.html">Shopping Cart</a></li>
       </ul>
     </nav>
   </div>
@@ -45,7 +45,7 @@
     </ul>
   </div>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="product.js"></script>
 </body>
   
     
