Step 6: Generate Shopping Cart Complete 🎉

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -49,7 +49,7 @@
   </div>   
 
 
-  <script type="module" src="product.js"></script>
+  <script type="module" src="cart.js"></script>
 </body>
   
     
