adding image section to td and style changes 🦄

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -30,8 +30,8 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../index.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
+
+        <li><a href="../products/products.html">Products</a></li>
         <li><a href="../cart/cart.html">Shopping Cart</a></li>
       </ul>
     </nav>
@@ -40,12 +40,13 @@
     <h5>Your Shopping Cart:</h5>
     <table>
       <tr>
+        <th>Image:</th>
         <th>Product:</th>
         <th>Quantity:</th>
         <th>Price:</th>
       </tr>
     </table>
-    <button>Place Order</button>
+    <button class="place-order">Place Order</button>
   </div>   
 
 
