Place order with alert, remove cart, and redirect

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -48,7 +48,7 @@
         <th>Price:</th>
       </tr>
     </table>
-    <button class="place-order">Place Order</button>
+    <button id="place-order" class="place-order">Place Order</button>
   </div>   
 
 
